Added deletion, updating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Notes Hero</string>
+    <string name="add_note">Add Note</string>
+    <string name="note_title">Title</string>
+    <string name="note_content">Content</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
 </resources>
